# Transfusion

./: README.md  mybuild.sh
Core/src/: CMakeLists.txt  ElasticFusion.cpp  GlobalModel.cpp
Core/src/Cuda/: reduce.cu
Core/src/Utils/: GPUConfig.h
GPUTest/src/: CMakeLists.txt
GUI/: 4.txt
GUI/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
GUI/src/: CMakeLists.txt  Main.cpp  MainController.cpp
GUI/src/Tools/: CameraInterface.h  GUI.h  LiveLogReader.cpp  LogReader.h  RawLogReader.cpp  RawLogReader.h  RealSenseInterface.cpp  RealSenseInterface.h
